# gitquarry

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  RESEARCH.md  SECURITY.md  SKILL.md  SPEC.md  flake.nix  llms-full.txt  llms.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  live-smoke.yml  release.yml
docs/: docs.json  index.mdx  release-runbook.md
docs/commands/: auth.mdx  config.mdx  inspect.mdx  search.mdx
docs/guides/: authentication.mdx  discovery-mode.mdx  github-enterprise-hosts.mdx  installation.mdx  output-and-scripting.mdx  quickstart.mdx  search-recipes.mdx  shell-completion.mdx  troubleshooting.mdx
docs/project/: architecture-and-spec.mdx  architecture.mdx  benchmark-study.mdx  contributing.mdx  development.mdx  packaging-and-release.mdx  security-and-auth-safety.mdx  specification.mdx  testing-and-release.mdx
docs/reference/: cli-overview.mdx  config-and-credentials.mdx  engine-internals.mdx  error-reference.mdx  output-contract.mdx  output-schemas.mdx  search-behavior.mdx
docs/wiki/: automation-patterns.mdx  faq.mdx  native-vs-discover.mdx  repository-signals.mdx  troubleshooting-playbook.mdx
nix/: package.nix
npm/: README.md  package.json
npm/lib/: install.cjs
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD
scripts/: benchmark-study.py  generate-benchmark-showcase.py  render-benchmark-charts.py
skill/: SKILL.md
skill/references/: benchmark-operator-playbook.md
src/: app.rs  cli.rs  config.rs  credential.rs  error.rs  github.rs  host.rs  lib.rs  main.rs  model.rs  output.rs  query.rs  score.rs
tests/: cli-smoke.rs
