[package]
name = "gitquarry"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Microck <contact@micr.dev>"]
description = "A terminal CLI for public GitHub repository search with explicit discovery controls."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Microck/gitquarry"
homepage = "https://github.com/Microck/gitquarry"
documentation = "https://docs.rs/gitquarry"
keywords = ["github", "search", "cli", "repositories"]
categories = ["command-line-utilities"]
include = [
  "src/**",
  "tests/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]

[dependencies]
anstream = "0.6.21"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
clap_complete = "4.5.61"
csv = "1.4.0"
dirs = "6.0.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
url = "2.5.7"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(not(any(target_os = "linux", target_os = "macos", target_os = "ios", target_os = "windows")))'.dependencies]
keyring = "3.6.3"

[dev-dependencies]
tempfile = "3.23.0"
tiny_http = "0.12.0"
